Add group by
Co-authored-by: Torben Meyer <torben.meyer@bakdata.com>