@@ -1,81 +1,72 @@
 package com.bakdata.conquery.sql.conversion.context.selects;
 
-import java.util.ArrayList;
-import java.util.Collection;
+import com.bakdata.conquery.apiv1.query.concept.specific.CQConcept;
+import com.bakdata.conquery.sql.conversion.context.step.QueryStep;
+import com.bakdata.conquery.sql.conversion.cqelement.concept.model.ConquerySelect;
+import com.bakdata.conquery.sql.conversion.cqelement.concept.model.select.ExtractingSelect;
+import com.bakdata.conquery.sql.models.ColumnDateRange;
+import lombok.AllArgsConstructor;
+import lombok.Value;
+import org.jooq.Field;
+import org.jooq.impl.DSL;
+
 import java.util.List;
 import java.util.Optional;
+import java.util.function.Function;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
-
-import com.bakdata.conquery.apiv1.query.concept.specific.CQConcept;
-import com.bakdata.conquery.sql.models.ColumnDateRange;
-import lombok.Builder;
-import lombok.Value;
-import lombok.With;
-import org.jooq.Field;
 
 /**
  * {@link ConceptSelects} represent all select fields of a {@link CQConcept}.
  */
 @Value
-@With
-@Builder(toBuilder = true)
+@AllArgsConstructor
 public class ConceptSelects implements Selects {
 
+	private static final String PRIMARY_COLUMN_ALIAS = "primary_column";
+
 	Field<Object> primaryColumn;
-	Optional<ColumnDateRange> dateRestrictionRange;
+
+	/**
+	 * An aggregated validity date of all validity dates of each {@link QueryStep} passed to the {@link MergedSelects} constructor.
+	 */
 	Optional<ColumnDateRange> validityDate;
-	List<Field<Object>> eventSelect;
-	List<Field<Object>> eventFilter;
-	List<Field<Object>> groupSelect;
-	List<Field<Object>> groupFilter;
+
+	List<ConquerySelect> conquerySelects;
 
 	@Override
 	public Selects withValidityDate(ColumnDateRange validityDate) {
-		return this.toBuilder()
-				   .validityDate(Optional.of(validityDate))
-				   .build();
+		return new ConceptSelects(primaryColumn, Optional.ofNullable(validityDate), conquerySelects);
 	}
 
 	@Override
-	public ConceptSelects qualifiedWith(String qualifier) {
-		return builder()
-				.primaryColumn(this.mapFieldToQualifier(qualifier, this.primaryColumn))
-				.dateRestrictionRange(this.dateRestrictionRange.map(dateRestriction -> dateRestriction.qualify(qualifier)))
-				.validityDate(this.validityDate.map(validityDate -> validityDate.qualify(qualifier)))
-				.eventSelect(this.mapFieldStreamToQualifier(qualifier, this.eventSelect.stream()).toList())
-				.eventFilter(this.mapFieldStreamToQualifier(qualifier, this.eventFilter.stream()).toList())
-				.groupSelect(this.mapFieldStreamToQualifier(qualifier, this.groupSelect.stream()).toList())
-				.groupFilter(this.mapFieldStreamToQualifier(qualifier, this.groupFilter.stream()).toList())
-				.build();
+	public Selects qualifiedWith(String qualifier) {
+		Field<Object> qualifiedPrimaryColumn = DSL.field(DSL.name(qualifier, this.primaryColumn.getName()));
+		Optional<ColumnDateRange> qualifiedValidityDate = validityDate.map(validityDate -> validityDate.qualify(qualifier));
+		List<ConquerySelect> qualifiedSelects = this.conquerySelects.stream()
+																	.map(select -> new ExtractingSelect<>(qualifier, select.select().getName(), Object.class))
+																	.collect(Collectors.toList());
+		return new ConceptSelects(qualifiedPrimaryColumn, qualifiedValidityDate, qualifiedSelects);
 	}
 
 	@Override
 	public List<Field<Object>> all() {
-		return Stream.concat(
-				this.primaryColumnAndValidityDate(),
-				this.explicitSelects().stream()
-		).toList();
-	}
-
-	private Stream<Field<Object>> primaryColumnAndValidityDate() {
-		return Stream.concat(
-				Stream.of(this.primaryColumn),
-				this.validityDate.map(ColumnDateRange::toFields).stream().flatMap(Collection::stream)
-		);
+		return Stream.of(
+							 Stream.of(this.primaryColumn),
+							 this.validityDate.stream().flatMap(range -> range.toFields().stream()),
+							 this.conquerySelects.stream().map(ConquerySelect::select)
+					 )
+					 .flatMap(Function.identity())
+					 .map(select -> (Field<Object>) select)
+					 .collect(Collectors.toList());
 	}
 
 	@Override
 	public List<Field<Object>> explicitSelects() {
-
-		List<Field<Object>> explicitSelects = new ArrayList<>();
-
-		dateRestrictionRange.ifPresent(columnDateRange -> explicitSelects.addAll(columnDateRange.toFields()));
-		explicitSelects.addAll(eventSelect);
-		explicitSelects.addAll(eventFilter);
-		explicitSelects.addAll(groupSelect);
-		explicitSelects.addAll(groupFilter);
-
-		return explicitSelects;
+		return this.conquerySelects.stream()
+								   .map(ConquerySelect::select)
+								   .map(select -> (Field<Object>) select)
+								   .collect(Collectors.toList());
 	}
 
 }
